--- a/index.html
+++ b/index.html
@@ -35,17 +35,79 @@
  </div> <d class="space-y-6">   <div class="bg-gray-700/30 rounded-lg p-6">       <h3 class="text-2xl font-bold text-white">Grupo: Cine y Series</h3>       <p class="text-gray-400 text-sm">12 miembros</p>       <div class="mt-4 flex space-x-3">           <button onclick="mostrarDetallesGrupo('grupo-cine-series')" class="px-4 py-2 bg-purple-600 text-white rounded-full hover:bg-purple-700 transition">               Ver Detalles           </button>           <button class="px-4 py-2 bg-blue-500 text-white rounded-full hover:bg-blue-600 transition">               Unirse           </button>       </div>       <div id="grupo-cine-series" class="hidden mt-4 bg-gray-800 p-4 rounded-lg space-y-3">           <h4 class="text-lg font-bold text-white">Detalles del Grupo</h4>           <p><i class="fas fa-user mr-2 text-purple-400"></i> Creador: María López</p>           <p><i class="fas fa-film mr-2 text-blue-400"></i> Temática: Películas y Series</p>           <p><i class="fas fa-calendar-alt mr-2 text-green-400"></i> Creado: Marzo 2024</p>           <p><i class="fas fa-comments mr-2 text-yellow-400"></i> Comunicación: Chat</p>       </div>   </div> </v>
 </div>
      </section>
-     <section class="w-full max-w-7xl mx-auto p-8"><header class="text-center mb-16">    <h2 class="text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-600 tracking-tight mb-4">        QuennVix    </h2>    <p class="text-xl text-gray-300 max-w-2xl mx-auto">        Mira peliculas con amigos mediante chat y videollamada     </p></header><div class="grid md:grid-cols-3 gap-8">
-  <div class="glass-morphism rounded-3xl shadow-2xl transform transition-all hover:scale-105 p-8 relative overflow-hidden"><div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-blue-500 to-purple-600"></div><div class="flex items-center justify-between mb-6">    <div class="flex items-center space-x-4">        <i class="ri-chat-3-line text-4xl text-blue-400"></i>        <h3 class="text-2xl font-bold">Chat en Vivo</h3>    </div>    <div class="flex items-center space-x-2">        <span class="h-3 w-3 bg-green-500 rounded-full pulse-animation"></span>        <span class="text-sm text-gray-300">En línea (3)</span>    </div></div>
-     <div id="chatContainer" class="bg-gray-800 bg-opacity-50 rounded-xl p-4 h-96 overflow-y-auto space-y-4 mb-4"> </div> <div class="flex space-x-2">    <input         type="text"         id="chatInput"        placeholder="Escribe un mensaje..."         class="flex-grow bg-gray-700 text-white rounded-full px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"    >    <button id="sendMessageBtn" class="bg-blue-600 hover:bg-blue-700 text-white p-2 rounded-full transition">        <i class="ri-send-plane-fill"></i>    </button> </div>
-</div>
+    <section class="w-full max-w-7xl mx-auto p-8">
+  <header class="text-center mb-16">
+    <h2 class="text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-600 tracking-tight mb-4">
+      QuennVix
+    </h2>
+    <p class="text-xl text-gray-300 max-w-2xl mx-auto">
+      Mira peliculas con amigos mediante chat y videollamada
+    </p>
+  </header>
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+    <div class="glass-morphism rounded-3xl shadow-2xl transform transition-all hover:scale-105 p-8 relative overflow-hidden">
+      <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-blue-500 to-purple-600"></div>
+      <div class="flex items-center justify-between mb-6">
+        <div class="flex items-center space-x-4">
+          <i class="ri-chat-3-line text-4xl text-blue-400"></i>
+          <h3 class="text-2xl font-bold">Chat en Vivo</h3>
+        </div>
+        <div class="flex items-center space-x-2">
+          <span class="h-3 w-3 bg-green-500 rounded-full pulse-animation"></span>
+          <span class="text-sm text-gray-300">En línea (2)</span>
+        </div>
+      </div>
+
+      <div id="chatContainer" class="bg-gray-800 bg-opacity-50 rounded-xl p-4 h-96 overflow-y-auto space-y-4 mb-4">
+    
+      </div>
+      <div class="flex space-x-2">
+        <input
+          type="text"
+          id="chatInput"
+          placeholder="Escribe un mensaje..."
+          class="flex-grow bg-gray-700 text-white rounded-full px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+        >
+        <button id="sendMessageBtn" class="bg-blue-600 hover:bg-blue-700 text-white p-2 rounded-full transition">
+          <i class="ri-send-plane-fill"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+
 <div class="glass-morphism rounded-3xl shadow-2xl transform transition-all hover:scale-105 p-8 relative overflow-hidden">
     <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-green-500 to-teal-600"></div>
-    <div class="flex items-center justify-between mb-6">   <div class="flex items-center space-x-4">       <i class="ri-vidicon-line text-4xl text-green-400"></i>       <h3 class="text-2xl font-bold">Videollamada</h3>   </div>   <span class="bg-green-500/20 text-green-500 px-3 py-1 rounded-full text-xs">       En vivo   </span>
+    <div class="flex flex-wrap items-center justify-between mb-6">
+        <div class="flex items-center space-x-4">
+            <i class="ri-vidicon-line text-4xl text-green-400"></i>
+            <h3 class="text-2xl font-bold">Videollamada</h3>
+        </div>
+        <span class="bg-green-500/20 text-green-500 px-3 py-1 rounded-full text-xs">
+            En vivo
+        </span>
     </div>
-    <div id="videoParticipants" class="grid grid-cols-3 gap-4 mb-4">  <div class="bg-gray-800 rounded-xl aspect-square relative overflow-hidden group">      <img src="https://i.pravatar.cc/150?u=3" class="w-full h-full object-cover group-hover:scale-110 transition">      <div class="absolute bottom-0 left-0 right-0 bg-black/50 text-white text-center p-1">Andrea</div>  </div>  <div class="bg-gray-800 rounded-xl aspect-square relative overflow-hidden group">      <img src="https://i.pravatar.cc/150?u=4" class="w-full h-full object-cover group-hover:scale-110 transition">      <div class="absolute bottom-0 left-0 right-0 bg-black/50 text-white text-center p-1">Ana</div>  </div>  <div id="addParticipantBtn" class="bg-gray-800 rounded-xl aspect-square flex items-center justify-center cursor-pointer hover:bg-gray-700 transition group">      <i class="ri-add-line text-4xl text-gray-400 group-hover:text-white transition"></i>  </div>
+    <div id="videoParticipants" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 mb-4">
+        <div class="bg-gray-800 rounded-xl aspect-square relative overflow-hidden group">
+            <img src="https://i.pravatar.cc/150?u=3" class="w-full h-full object-cover group-hover:scale-110 transition">
+            <div class="absolute bottom-0 left-0 right-0 bg-black/50 text-white text-center p-1">Andrea</div>
+        </div>
+        <div class="bg-gray-800 rounded-xl aspect-square relative overflow-hidden group">
+            <img src="https://i.pravatar.cc/150?u=4" class="w-full h-full object-cover group-hover:scale-110 transition">
+            <div class="absolute bottom-0 left-0 right-0 bg-black/50 text-white text-center p-1">Ana</div>
+        </div>
+        <div id="addParticipantBtn" class="bg-gray-800 rounded-xl aspect-square flex items-center justify-center cursor-pointer hover:bg-gray-700 transition group">
+            <i class="ri-add-line text-4xl text-gray-400 group-hover:text-white transition"></i>
+        </div>
     </div>
-    <div id="friendsMenu" class="hidden bg-gray-800 rounded-xl p-4 max-h-64 overflow-y-auto mb-4">    <h4 class="text-xl font-semibold mb-4 flex items-center justify-between">        Invitar Amigos        <button id="closeFriendsMenu" class="text-gray-400 hover:text-white">            <i class="ri-close-line"></i>        </button>    </h4>    <div id="friendsList" class="space-y-2">    </div>
+    <div id="friendsMenu" class="hidden bg-gray-800 rounded-xl p-4 max-h-64 overflow-y-auto mb-4">
+        <h4 class="text-xl font-semibold mb-4 flex items-center justify-between">
+            Invitar Amigos
+            <button id="closeFriendsMenu" class="text-gray-400 hover:text-white">
+                <i class="ri-close-line"></i>
+            </button>
+        </h4>
+        <div id="friendsList" class="space-y-2">
+        </div>
     </div>
     <div id="inviteAlert" class="hidden absolute top-20 left-1/2 transform -translate-x-1/2 bg-black/75 text-white py-2 px-4 rounded-full">
         Enviando solicitud...
@@ -62,17 +124,49 @@
         </button>
     </div>
 </div>
+
 <div class="glass-morphism rounded-3xl shadow-2xl transform transition-all hover:scale-105 p-8 relative overflow-hidden">
     <div class="absolute top-0 left-0 w-full h-1 bg-gradient-to-r from-purple-500 to-pink-600"></div>
-<div class="flex items-center justify-between mb-6">
-    <div class="flex items-center space-x-4">
-        <i class="ri-movie-line text-4xl text-purple-400"></i>
-        <h3 class="text-2xl font-bold">Control</h3>
+    <div class="flex flex-wrap items-center justify-between mb-6">
+        <div class="flex items-center space-x-4">
+            <i class="ri-movie-line text-4xl text-purple-400"></i>
+            <h3 class="text-2xl font-bold">Control</h3>
+        </div>
+        <span class="bg-purple-500/20 text-purple-500 px-3 py-1 rounded-full text-xs">
+            Compartiendo
+        </span>
     </div>
-    <span class="bg-purple-500/20 text-purple-500 px-3 py-1 rounded-full text-xs">Compartiendo</span>
+    <div class="bg-gray-800 rounded-xl p-6">
+        <div class="flex justify-between items-center mb-4">
+            <div>
+                <p class="font-semibold text-white">Avengers: Endgame</p>
+                <p class="text-gray-400 text-sm">01:23:45 / 03:01:23</p>
+            </div>
+            <div class="flex items-center space-x-2">
+                <i class="ri-volume-down-line text-gray-400"></i>
+                <input type="range" id="volumeSlider" min="0" max="100" value="50" class="w-32 h-2 bg-gray-600 rounded-full appearance-none cursor-pointer slider">
+                <i class="ri-volume-up-line text-gray-400"></i>
+            </div>
+        </div>
+        <div class="flex justify-between items-center">
+            <div class="flex space-x-4">
+                <button class="bg-blue-500/20 p-3 rounded-full hover:bg-blue-500/40 transition group">
+                    <i class="ri-rewind-line text-blue-500 group-hover:text-blue-400"></i>
+                </button>
+                <button id="playPauseBtn" class="bg-blue-500/20 p-3 rounded-full hover:bg-blue-500/40 transition group">
+                    <i class="ri-pause-line text-blue-500 group-hover:text-blue-400" id="playPauseIcon"></i>
+                </button>
+                <button class="bg-blue-500/20 p-3 rounded-full hover:bg-blue-500/40 transition group">
+                    <i class="ri-play-line text-blue-500 group-hover:text-blue-400"></i>
+                </button>
+            </div>
+            <button class="bg-purple-500/20 p-3 rounded-full hover:bg-purple-500/40 transition group">
+                <i class="ri-fullscreen-line text-purple-500 group-hover:text-purple-400"></i>
+            </button>
+        </div>
+    </div>
 </div>
-    <div class="bg-gray-800 rounded-xl p-6">    <div class="flex justify-between items-center mb-4">        <div>            <p class="font-semibold text-white">Avengers: Endgame</p>            <p class="text-gray-400 text-sm">01:23:45 / 03:01:23</p>        </div>        <div class="flex items-center space-x-2">            <i class="ri-volume-down-line text-gray-400"></i>            <input type="range" id="volumeSlider" min="0" max="100" value="50" class="w-32 h-2 bg-gray-600 rounded-full appearance-none cursor-pointer slider">            <i class="ri-volume-up-line text-gray-400"></i>        </div>    </div>    <div class="flex justify-between items-center">        <div class="flex space-x-4">            <button class="bg-blue-500/20 p-3 rounded-full hover:bg-blue-500/40 transition group">                <i class="ri-rewind-line text-blue-500 group-hover:text-blue-400"></i>            </button>            <button id="playPauseBtn" class="bg-blue-500/20 p-3 rounded-full hover:bg-blue-500/40 transition group">                <i class="ri-pause-line text-blue-500 group-hover:text-blue-400" id="playPauseIcon"></i>            </button>            <button class="bg-blue-500/20 p-3 rounded-full hover:bg-blue-500/40 transition group">                <i class="ri-play-line text-blue-500 group-hover:text-blue-400"></i>            </button>        </div>        <button class="bg-purple-500/20 p-3 rounded-full hover:bg-purple-500/40 transition group">            <i class="ri-fullscreen-line text-purple-500 group-hover:text-purple-400"></i>        </button>    </div></div>
-</div>
+
 
     </main>
     <script src="ia.js"></script>
