--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             Comparte experiencias cinematográficas en tiempo real. Chat, videollamada y reproducción sincronizada.
                         </p>
                         <div class="flex space-x-4">
-                            <a href="#" class="btn-primary">
+                            <a href="https://quennnix-alequenmcs-projects.vercel.app/menuprincipal/menuprincipal.html" class="btn-primary">
                                 Iniciar Ahora
                             </a>
                         </div>
