--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuennVix </title>
+    <title>QuennVix Info (Alpha) </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -168,7 +168,7 @@
             </h3>
             <p class="text-gray-300 text-center leading-relaxed">
                 Chat de texto, videollamada y audio integrados para una 
-                experiencia de visualización completamente social.
+                experiencia de visualización completamente inmersiva.
             </p>
         </div>
 
@@ -184,7 +184,7 @@
                 Recomendaciones Inteligentes
             </h3>
             <p class="text-gray-300 text-center leading-relaxed">
-                Sistema de IA avanzado que sugiere películas personalizadas 
+                Sistema de IA que sugiere películas personalizadas 
                 basado en los gustos colectivos del grupo.
             </p>
         </div>
@@ -192,7 +192,7 @@
 </section>
         <section class="max-w-2xl mx-auto space-y-6">
             <h2 class="text-4xl font-bold text-center mb-12 tracking-tight">
-                Cómo Funciona
+                ¿Cómo Funciona?
             </h2>
             <div class="flex bg-gray-800/50 text-white rounded-xl overflow-hidden shadow-lg">
                 <button 
