--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
         <footer class="text-center py-8 border-t border-gray-800">
             <p class="text-gray-400">© 2024 QuennVix. Todos los derechos reservados.</p>
             <p class="text-gray-500">Todo lo que se muestra en la web,Esta siendo desarrollado, Algunas funciones no estarian disponibles.</p>
-            <p class="text-g-800">La pagina web no es responsiva correctamente,para mayor comodidad use un teléfono</p>
+            <p class="text-red-800">La pagina web no es responsiva correctamente,para mayor comodidad use un teléfono</p>
         </footer>
     
     </main>
